--- a/main.css
+++ b/main.css
@@ -33,3 +33,14 @@ ol{
   color:red;
   text-decoration:underline;
 }
+@media(max-width:800px){
+  #grid{
+    display:block;
+  }
+  #grid ol{
+    border-right:none;
+  }
+  h1{
+    border-bottom:none;
+  }
+}
